# LAMP-data-reports

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  dynamo_config.py  parameter_store.py  pyproject.toml  report_generator.py  requirements.txt  user_repository.py
.github/workflows/: callable-build-docker.yml  callable-deploy-ecs.yml  manual-deploy-tag.yml
client/: package-lock.json
client/src/: App.css  App.jsx  README.md  index.css  index.jsx
client/src/components/: Admin.jsx  DataReport.jsx  Login.jsx  NavBar.jsx
client/src/style/: DataReport.css  Login.css  NavBar.css
instance/: database.db
reports/bidmc/: report_generator.py
static/: scripttest.js  style.css
templates/: base.html  index.html  login.html
